--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
-<div class="container-fluid">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Bootstrap 3, from LayoutIt!</title>
+
+    <meta name="description" content="Source code generated using layoutit.com">
+    <meta name="author" content="LayoutIt!">
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+  </head>
+  <body>
+
+    <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
 			<nav class="navbar navbar-default" role="navigation">
@@ -44,7 +62,7 @@
 					</ul>
 					<form class="navbar-form navbar-left" role="search">
 						<div class="form-group">
-							<input class="form-control" type="text" />
+							<input class="form-control" type="text">
 						</div> 
 						<button type="submit" class="btn btn-default">
 							Submit
@@ -77,7 +95,7 @@
 				</div>
 				
 			</nav>
-			<div class="alert alert-dismissable alert-danger">
+			<div class="alert alert-success alert-dismissable">
 				 
 				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">
 					×
@@ -86,10 +104,16 @@
 					Alert!
 				</h4> <strong>Warning!</strong> Best check yo self, you're not looking too good. <a href="#" class="alert-link">alert link</a>
 			</div>
-			<div class="progress progress-striped active">
+			<div class="progress active progress-striped">
 				<div class="progress-bar progress-success">
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
+  </body>
+</html>
