--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 					×
 				</button>
 				<h4>
-					Alert!
-				</h4> <strong>Warning!</strong> Best check yo self, you're not looking too good. <a href="#" class="alert-link">alert link</a>
+					flandre.io is NOT done!
+				</h4> <strong>Do not worry!</strong> im working on it!!! for now, get the bot while i work on it ;3 <a href="#" class="https://discordapp.com/oauth2/authorize?&client_id=189173769317646337&scope=bot">get flandre</a>
 			</div>
 			<div class="progress active progress-striped">
 				<div class="progress-bar progress-success">
